--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.7.0",
     "react-pdf": "^4.0.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.3",
+    "react-social-icons": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,7 +26,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "react-social-icons": "^4.1.0"
-  }
+  "devDependencies": {}
 }
