--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "react-pdf": "^4.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
-    "react-social-icons": "^4.1.0"
+    "react-social-icons": "^4.1.0",
+    "react-youtube": "^7.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
